--- a/Styles/blog-style.css
+++ b/Styles/blog-style.css
@@ -1,50 +1,50 @@
+/* Common Style */
 body {
+    margin: 0 auto;
+    font-family: 'Poppins';
+    font-style: normal;
+}
+
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
 }
 
+header {
+    display: flex;
+    justify-content: center;
+}
 
-
+/* Cover Start Here */
 .top-level {
-    width: 1320px;
-    height: 641px;
+    width: 80%;
     background-color: black;
     border-radius: 30px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    padding-left: 100px;
-    margin-bottom: 150px;
+    padding: 33px 50px 0px;
     margin-top: 50px;
-}
 
-.player {
-    padding-top: 38px;
-    padding-right: 80px;
-    width: 581px;
-    height: 620px;
 }
 
 .player img {
     width: 100%;
+    margin-bottom: -4px;
 }
 
 .title {
     color: white;
-    width: 531px;
-    height: 424px;
     border-radius: 5px;
+    width: 50%;
+    margin-left: 30px;
 }
 
 .title h1 {
-    width: 531px;
-    height: 240px;
     font-family: 'Poppins';
     font-weight: 700;
     font-size: 60px;
-    margin-bottom: 50px;
     margin-top: 0;
     display: flex;
 }
@@ -53,7 +53,6 @@ body {
     font-family: 'Poppins';
     font-weight: 400;
     font-size: 16px;
-    padding-bottom: 30px;
 }
 
 .title a {
@@ -69,6 +68,40 @@ body {
     align-items: center;
 }
 
+@keyframes head {
+    0% {
+        left: -50%;
+        top: 35%;
+    }
+
+    50% {
+        top: 12%;
+        left: 55%;
+        transform: scale(0.75);
+
+    }
+
+    100% {
+        left: -20%;
+        top: -10%;
+        transform: scale(0.9);
+    }
+}
+
+.football {
+    display: none;
+}
+
+.top-level:hover .football {
+    display: flex;
+    position: absolute;
+    animation: head 2s ease-in-out 0s infinite;
+}
+
+.football img {
+    width: 30%;
+}
+
 .fa-angle-right {
     color: white;
 }
@@ -77,10 +110,15 @@ body {
     margin-left: 15px;
 }
 
+/* Cover End Here */
+
+
+/* Middle Layer Start Here */
 .mid-level {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
     gap: 25px;
+    margin-top: 150px;
 }
 
 .menu {
@@ -173,6 +211,10 @@ body {
     color: rgba(22, 22, 22, 0.7);
 }
 
+.view-button {
+    display: none;
+}
+
 .view a {
     width: 187px;
     height: 56px;
@@ -181,17 +223,14 @@ body {
     border-radius: 5px;
     text-decoration: none;
     font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 550px;
-    margin-bottom: 200px;
-    display: none;
 }
 
+/* Middle Layer End Here */
+
+
+/* Footer Start Here */
 .low-layer {
-    height: 450px;
-    width: 1520px;
+    width: 100%;
     background-color: black;
     display: flex;
     flex-direction: column;
@@ -209,8 +248,9 @@ body {
     margin-bottom: 0;
 }
 
-.low-layer hr {
-    width: 1320px;
+.horizontal-line {
+    width: 90%;
+    height: 0px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     margin-top: 50px;
     margin-bottom: 50px;
@@ -223,12 +263,18 @@ body {
     gap: 50px;
 }
 
+.extras-name {
+    color: #B9B9B9;
+    text-decoration: none;
+}
+
 .social {
     text-decoration: none;
     font-size: 30px;
     display: flex;
     gap: 30px;
-    margin-top: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .fa-facebook,
@@ -237,17 +283,204 @@ body {
     color: #B9B9B9;
 }
 
+/* Footer End Here */
+
+/* For Mobile Devices */
+
 @media only screen and (max-width:668px) {
     .top-level {
-        width: 332px;
-        height: 472px;
+        width: 50%;
         background-color: black;
-        border-radius: 30px;
         display: flex;
-        justify-content: space-around;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
-        padding-left: 100px;
-        margin-bottom: 150px;
     }
+
+    .title {
+        color: white;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .player img {
+        width: 100%;
+        margin-top: 50px;
+
+    }
+
+    .title h1 {
+        font-size: 22px;
+        line-height: 33px;
+    }
+
+    .title p {
+        font-size: 14px;
+        line-height: 24px;
+        color: rgba(255, 255, 255, 0.8);
+    }
+
+    .title a {
+        width: 161px;
+        height: 40px;
+    }
+
+    .mid-level {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu {
+        background-color: white;
+    }
+
+    .menu a {
+        border: 1px solid gray;
+    }
+
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 16px;
+    }
+
+    .extras {
+        margin-top: 20px;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        text-align: center;
+    }
+
+    .extras-name {
+        font-weight: 400;
+        font-size: 14px;
+    }
+
+    .social {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+
+}
+
+/* For Tablet Devices */
+
+@media only screen and (min-width: 669px) and (max-width:988px) {
+    .top-level {
+        width: 75%;
+        background-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .title {
+        color: white;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .player img {
+        width: 100%;
+        margin-top: 50px;
+
+    }
+
+    .title h1 {
+        font-size: 22px;
+        line-height: 33px;
+    }
+
+    .title p {
+        font-size: 14px;
+        line-height: 24px;
+        color: rgba(255, 255, 255, 0.8);
+    }
+
+    .mid-level {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu {
+        margin-top: -50px;
+        margin-bottom: 20px;
+        background-color: white;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: 100%;
+        height: 5%;
+    }
+
+    .menu a {
+        border: 1px solid gray;
+        width: 95%;
+        justify-content: center;
+    }
+
+    .blogs {
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 16px;
+    }
+
+    .extras {
+        margin-top: 20px;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        text-align: center;
+    }
+
+    .extras-name {
+        font-weight: 400;
+        font-size: 14px;
+    }
+
+    .view-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        border-radius: 5px;
+        margin-top: -50px;
+        margin-bottom: 50px;
+    }
+
+    .view a {
+        width: 187px;
+        height: 56px;
+        background-color: red;
+        color: white;
+        border-radius: 5px;
+        text-decoration: none;
+        font-size: 20px;
+        padding: 20px 10px;
+    }
+
+    .social {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+
 
 }
